# ParallEnv

./: README.md  pyproject.toml
src/parallenv/: __init__.py  parallenv.py
tests/: test_parallenv.py
